- Added the ability to hide commands and options from help.
- Added Float Range in Types.
- `secho`'s first argument can now be `None`, like in `echo`.
- Usage errors now hint at the `--help` option.
- ``launch`` now works properly under Cygwin. See #650.
- `CliRunner.invoke` now may receive `args` as a string representing
  a Unix shell command. See #664.
- Fix bug that caused bashcompletion to give improper completions on 
  chained commands. See #774.
- 't' and 'f' are now converted to True and False. 
- Fix bug that caused bashcompletion to give improper completions on
  chained commands when a required option/argument was being completed.
  See #790.
- Allow autocompletion function to determine whether or not to return
  completions that start with the incomplete argument.
- Subcommands that are named by the function now automatically have the
  underscore replaced with a dash.  So if you register a function named
  `my_command` it becomes `my-command` in the command line interface.
- Stdout is now automatically set to non blocking.
- Use realpath to convert atomic file internally into its full canonical
  path so that changing working directories does not harm it.
- Force stdout/stderr writable.  This works around issues with badly patched
  standard streams like those from jupyter.

Version 6.8
-----------

(bugfix release; yet to be released)

- Disabled sys._getframes() on Python interpreters that don't support it. See
  #728.
- Fix bug in test runner when calling ``sys.exit`` with ``None``. See #739.
- Fix crash on Windows console, see #744.
- Fix bashcompletion on chained commands. See #754.
- Fix option naming routine to match documentation.  See #793
- Fixed the behavior of click error messages with regards to unicode on 2.x
  and 3.x respectively.  Message is now always unicode and the str and unicode
  special methods work as you expect on that platform.

Version 6.7
-----------

(bugfix release; released on January 6th 2017)
