@@ -23,9 +23,9 @@ Version 7.0
 - ``launch`` now works properly under Cygwin. See #650.
 - `CliRunner.invoke` now may receive `args` as a string representing
   a Unix shell command. See #664.
-- Fix bug that caused bashcompletion to give improper completions on 
+- Fix bug that caused bashcompletion to give improper completions on
   chained commands. See #774.
-- 't' and 'f' are now converted to True and False. 
+- 't' and 'f' are now converted to True and False.
 - Fix bug that caused bashcompletion to give improper completions on
   chained commands when a required option/argument was being completed.
   See #790.
@@ -39,6 +39,7 @@ Version 7.0
   path so that changing working directories does not harm it.
 - Force stdout/stderr writable.  This works around issues with badly patched
   standard streams like those from jupyter.
+- Added ``-h`` alias for ``--help`` option
 
 Version 6.8
 -----------
